slight progress on Visitor json lookup

--- a/helloworld/index.yaml
+++ b/helloworld/index.yaml
@@ -15,3 +15,10 @@ indexes:
   properties:
   - name: date
     direction: desc
+
+- kind: Visitor
+  properties:
+  - name: expectedArrivalDate
+  - name: expectedArrivalTime
+  - name: actualArrivalTime
+  - name: actualDepartureTime
